refactor: code clarity
Signed-off-by: RadovanTomik <radovan.tomasik@bbmri-eric.eu>